# strudel.nvim

./: .gitignore  Cargo.toml  Makefile
lua/: strudel.lua  strudel_test.lua
src/: lib.rs
strudel-frontend/: .prettierrc.json  index.html  package-lock.json  package.json
strudel-frontend/src/: main.js
